--- a/app/src/main/res/layout-land/fragment_detail.xml
+++ b/app/src/main/res/layout-land/fragment_detail.xml
@@ -13,18 +13,19 @@
 
         <FrameLayout
             android:id="@+id/frameLayout"
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_width="400dp"
+            android:layout_height="200dp"
+            android:layout_marginStart="@dimen/common_margin_middle"
             android:layout_marginTop="@dimen/common_margin_header"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
                 android:id="@+id/img_background"
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:contentDescription="@string/movie_title" />
+                android:layout_height="match_parent"
+                android:contentDescription="@string/movie_title"
+                android:scaleType="fitXY" />
 
             <View
                 android:layout_width="match_parent"
@@ -32,17 +33,33 @@
                 android:background="@drawable/gradient" />
         </FrameLayout>
 
+        <TextView
+            android:id="@+id/txt_movie_title"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/common_margin_min"
+            android:ellipsize="end"
+            android:fontFamily="sans-serif-black"
+            android:gravity="center"
+            android:maxLines="3"
+            android:textColor="@color/white"
+            android:textSize="@dimen/common_size_detail_movie"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@id/frameLayout"
+            app:layout_constraintEnd_toEndOf="@id/frameLayout"
+            app:layout_constraintStart_toStartOf="@id/frameLayout"
+            tools:text="Movie Title" />
+
         <LinearLayout
             android:id="@+id/linear_bookmark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/common_margin_default"
-            android:layout_marginTop="@dimen/common_margin_min"
+            android:layout_marginTop="@dimen/common_margin_default"
+            android:layout_marginEnd="@dimen/common_margin_middle"
             android:gravity="center"
             android:orientation="vertical"
-            app:layout_constraintEnd_toStartOf="@+id/linear_share"
-            app:layout_constraintStart_toEndOf="@+id/linearLayout3"
-            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/frameLayout"
             tools:ignore="UnknownId,UseCompoundDrawables">
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -69,12 +86,12 @@
             android:id="@+id/linear_share"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/common_margin_min"
-            android:layout_marginEnd="@dimen/common_margin_default"
+            android:layout_marginEnd="@dimen/common_margin_middle"
+            android:layout_marginBottom="@dimen/common_margin_default"
             android:gravity="center"
             android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
             tools:ignore="UseCompoundDrawables">
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -97,33 +114,82 @@
 
         </LinearLayout>
 
-        <!--
-                <LinearLayout
-                    android:id="@+id/linearLayout3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/common_margin_default"
-                    android:layout_marginTop="@dimen/common_margin_min"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    app:layout_constraintStart_toEndOf="@id/guideline2"
-                    app:layout_constraintTop_toBottomOf="@+id/frameLayout"
-                    tools:ignore="UseCompoundDrawables">
+        <TextView
+            android:id="@+id/txt_rating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/common_margin_max"
+            android:drawablePadding="@dimen/common_padding_min"
+            android:gravity="center"
+            android:textColor="@color/green_met"
+            android:textSize="@dimen/common_size_detail_movie"
+            app:drawableStartCompat="@drawable/ic_star_border"
+            app:drawableTint="@color/green_met"
+            app:layout_constraintBottom_toTopOf="@id/txt_released"
+            app:layout_constraintStart_toEndOf="@id/frameLayout"
+            app:layout_constraintTop_toTopOf="@id/frameLayout"
+            tools:text="8.5 (5854 Reviews)" />
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:contentDescription="@string/favourite"
-                        android:src="@drawable/ic_favorite_border" />
+        <TextView
+            android:id="@+id/txt_released"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/common_margin_max"
+            android:drawablePadding="@dimen/common_padding_min"
+            android:gravity="center"
+            android:textColor="@color/green_met"
+            android:textSize="@dimen/common_size_detail_movie"
+            app:drawableStartCompat="@drawable/ic_calendar_month"
+            app:drawableTint="@color/green_met"
+            app:layout_constraintBottom_toTopOf="@id/txt_language"
+            app:layout_constraintStart_toEndOf="@id/frameLayout"
+            app:layout_constraintTop_toBottomOf="@+id/txt_rating"
+            tools:text="2022-07-20 Released" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/favourite"
-                        android:textColor="@color/white" />
+        <TextView
+            android:id="@+id/txt_language"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/common_margin_max"
+            android:drawablePadding="@dimen/common_padding_min"
+            android:gravity="center"
+            android:textColor="@color/green_met"
+            android:textSize="@dimen/common_size_detail_movie"
+            app:drawableStartCompat="@drawable/ic_language"
+            app:drawableTint="@color/green_met"
+            app:layout_constraintBottom_toBottomOf="@id/frameLayout"
+            app:layout_constraintStart_toEndOf="@id/frameLayout"
+            app:layout_constraintTop_toBottomOf="@+id/txt_released"
+            tools:text="Language en " />
 
-                </LinearLayout>
-        -->
+        <View
+            android:id="@+id/divider_line"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginHorizontal="@dimen/common_margin_default"
+            android:layout_marginTop="@dimen/common_margin_middle"
+            android:background="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/frameLayout"
+            tools:ignore="MissingConstraints" />
+
+        <TextView
+            android:id="@+id/txt_title_overview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/common_margin_default"
+            android:fontFamily="@font/poppins_regular"
+            android:gravity="center"
+            android:padding="@dimen/common_padding_min"
+            android:text="@string/overview"
+            android:textColor="@color/white"
+            android:textSize="@dimen/common_size_default"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/divider_line" />
+
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
@@ -133,8 +199,8 @@
             android:layout_marginBottom="@dimen/common_margin_min"
             android:clipToPadding="true"
             app:cardCornerRadius="@dimen/common_corner_min"
-            app:layout_constraintBottom_toTopOf="@+id/guideline"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/txt_title_overview">
 
             <ImageView
                 android:id="@+id/img_movie"
@@ -146,107 +212,10 @@
 
         </androidx.cardview.widget.CardView>
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_begin="438dp" />
-
-        <TextView
-            android:id="@+id/txt_movie_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="40dp"
-            android:fontFamily="sans-serif-black"
-            android:gravity="center"
-            android:textColor="@color/white"
-            android:textSize="@dimen/common_size_title"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/cardView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:text="Movie Title" />
-
-        <TextView
-            android:id="@+id/txt_rating"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/common_margin_min"
-            android:drawablePadding="@dimen/common_padding_min"
-            android:gravity="center"
-            android:textColor="@color/green_met"
-            android:textSize="@dimen/common_size_detail_attributes"
-            app:drawableStartCompat="@drawable/ic_star_border"
-            app:drawableTint="@color/green_met"
-            app:layout_constraintStart_toStartOf="@+id/txt_released"
-            app:layout_constraintTop_toBottomOf="@id/linear_bookmark"
-            tools:text="8.5 (5854 Reviews)" />
-
-
-        <TextView
-            android:id="@+id/txt_released"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/common_margin_min"
-            android:drawablePadding="@dimen/common_padding_min"
-            android:gravity="center"
-            android:textColor="@color/green_met"
-            android:textSize="@dimen/common_size_detail_attributes"
-            app:drawableStartCompat="@drawable/ic_calendar_month"
-            app:drawableTint="@color/green_met"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/cardView"
-            app:layout_constraintTop_toBottomOf="@+id/txt_rating"
-            tools:text="2022-07-20 Released" />
-
-        <TextView
-            android:id="@+id/txt_language"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/common_margin_min"
-            android:drawablePadding="@dimen/common_padding_min"
-            android:gravity="center"
-            android:textColor="@color/green_met"
-            android:textSize="@dimen/common_size_detail_attributes"
-            app:drawableStartCompat="@drawable/ic_language"
-            app:drawableTint="@color/green_met"
-            app:layout_constraintStart_toStartOf="@+id/txt_released"
-            app:layout_constraintTop_toBottomOf="@+id/txt_released"
-            tools:text="Language en " />
-
-        <View
-            android:id="@+id/divider_line"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginHorizontal="@dimen/common_margin_default"
-            android:layout_marginTop="@dimen/common_margin_default"
-            android:background="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cardView"
-            tools:ignore="MissingConstraints" />
-
-        <TextView
-            android:id="@+id/txt_title_overview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/common_margin_min"
-            android:fontFamily="@font/poppins_regular"
-            android:gravity="center"
-            android:padding="@dimen/common_padding_default"
-            android:text="@string/overview"
-            android:textColor="@color/white"
-            android:textSize="@dimen/common_size_default"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/guideline" />
-
         <TextView
             android:id="@+id/txt_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_marginStart="@dimen/common_margin_default"
             android:layout_marginEnd="@dimen/common_margin_default"
             android:fontFamily="@font/poppins_regular"
@@ -254,16 +223,10 @@
             android:textColor="@color/white"
             android:textSize="@dimen/common_size_detail_movie"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_title_overview"
+            app:layout_constraintStart_toEndOf="@id/cardView"
+            app:layout_constraintTop_toBottomOf="@id/txt_title_overview"
             tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." />
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_begin="143dp" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.core.widget.NestedScrollView>
