--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,21 +24,18 @@
         android:layout_width="0dp"
         android:layout_height="56dp"
         android:layout_marginTop="@dimen/common_margin_min"
-        app:menu="@menu/bottom_navigation_menu"
+        android:background="?android:attr/windowBackground"
+        app:itemBackground="@color/black_dense"
+        app:itemIconTint="@color/bnv_tab_item_foreground"
+        app:itemRippleColor="@color/white"
+        app:itemTextAppearanceActive="@style/navTextActive"
+        app:itemTextAppearanceInactive="@style/navTextInactive"
+        app:itemTextColor="@color/bnv_tab_item_foreground"
+        app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/nav_host_fragment"
-        app:layout_constraintVertical_bias="1.0"
-        app:labelVisibilityMode="selected"
-        app:itemBackground="@color/black_dense"
-        app:itemIconTint="@color/yellow"
-        app:itemTextColor="@color/yellow"
-        app:itemRippleColor="@color/white" />
+        app:menu="@menu/bottom_navigation_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-<!--
-    app:itemTextAppearanceActive="@color/yellow"
-    app:itemTextAppearanceInactive="@color/grey_light"-->
