--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,6 +26,8 @@
     <!-- Dimens CornerRadius -->
     <dimen name="common_corner_min">8dp</dimen>
     <dimen name="common_corner_default">16dp</dimen>
+    <dimen name="common_corner_middle">32dp</dimen>
+
     <dimen name="home_image_size">80dp</dimen>
     <dimen name="error_image_size">50dp</dimen>
     <dimen name="text_size_normal">20sp</dimen>
