--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -266,17 +266,17 @@
             app:layout_constraintGuide_begin="143dp" />
 
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/img_home_page"
+            android:id="@+id/mcv_home_page"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/common_margin_default"
             android:layout_marginVertical="@dimen/common_margin_default"
             android:backgroundTint="@color/green_met"
+            android:visibility="gone"
             app:cardCornerRadius="@dimen/common_corner_middle"
             app:cardElevation="@dimen/common_margin_min"
-            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/mcv_watch_trailer"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/txt_description">
 
@@ -285,11 +285,39 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/common_margin_min"
-                android:text="@string/Homepage"
-                android:visibility="gone"
                 android:background="@drawable/rounded_corners"
+                android:text="@string/homepage"
                 android:textAlignment="center"
-                android:textSize="@dimen/common_size_detail_attributes"/>
+                android:textSize="@dimen/common_size_detail_attributes"
+                android:visibility="gone" />
+
+        </com.google.android.material.card.MaterialCardView>
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/mcv_watch_trailer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/common_margin_default"
+            android:layout_marginVertical="@dimen/common_margin_default"
+            android:backgroundTint="@color/green_met"
+            android:visibility="gone"
+            app:cardCornerRadius="@dimen/common_corner_middle"
+            app:cardElevation="@dimen/common_margin_min"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/mcv_home_page"
+            app:layout_constraintTop_toBottomOf="@id/txt_description">
+
+            <Button
+                android:id="@+id/btn_watch_trailer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/common_margin_min"
+                android:background="@drawable/rounded_corners"
+                android:text="@string/watch_trailer"
+                android:textAlignment="center"
+                android:textSize="@dimen/common_size_detail_attributes"
+                android:visibility="gone" />
 
         </com.google.android.material.card.MaterialCardView>
 
