--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -2,4 +2,5 @@
 <resources>
     <integer name="main_columns">2</integer>
     <integer name="columns_bookmark">1</integer>
+    <integer name="columns_similar">3</integer>
 </resources>
