Linking logic between movie and similar added

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -49,6 +49,13 @@
         <argument
             android:name="movie"
             app:argType="com.moviemain.model.data.Movie" />
+        <action
+            android:id="@+id/action_movieDetailFragment_to_similarDetailFragment"
+            app:destination="@id/similarDetailFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
     <fragment
         android:id="@+id/menu_gallery"
@@ -83,6 +90,22 @@
         tools:layout="@layout/fragment_search" >
         <action
             android:id="@+id/action_menu_search_to_movieDetailFragment"
+            app:destination="@id/movieDetailFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+    </fragment>
+    <fragment
+        android:id="@+id/similarDetailFragment"
+        android:name="com.moviemain.ui.view.detail.SimilarDetailFragment"
+        android:label="@string/movie_detail"
+        tools:layout="@layout/fragment_similar_detail" >
+        <argument
+            android:name="movie"
+            app:argType="com.moviemain.model.data.Movie" />
+        <action
+            android:id="@+id/action_similarDetailFragment_to_movieDetailFragment"
             app:destination="@id/movieDetailFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
